--- a/css/style.css
+++ b/css/style.css
@@ -647,7 +647,7 @@ body.show_sidemenu .pusher {
   background-color: rgba(0, 15, 22, 0.9); }
   @media screen and (min-width: 600px) {
     #content {
-      top: 630px; } }
+      top: 650px; } }
 
 .space {
   margin-bottom: 50px; }
@@ -972,9 +972,21 @@ See separate stylesheet: 'easy-responsive-tabs.css'
 
 /*-------------------------- Contact Page & Form -----------------------------*/
 #contact {
-  background-color: #abb7b7; }
+  background-color: #d2d7d3; }
+  @media screen and (max-width: 600px) {
+    #contact {
+      padding: 10px; } }
   #contact h2 {
-    padding-top: 20px; }
+    padding-top: 50px;
+    padding-bottom: 50px;
+    text-align: center; }
+    @media screen and (max-width: 600px) {
+      #contact h2 {
+        padding-top: 80px; } }
+  #contact input[type="email"] {
+    font-family: 'Andale Mono';
+    padding: 5px;
+    font-size: 12px; }
   #contact input[type="submit"] {
     border: none;
     background-color: #000f16;
@@ -986,12 +998,14 @@ See separate stylesheet: 'easy-responsive-tabs.css'
     border: none;
     padding: 2px;
     font-family: 'Andale Mono';
+    font-size: 12px;
     width: 100%; }
 
-.div.wpcf7-mail-sent-ok {
-  border: 1px dotted #f1a9a0; }
+.map {
+  padding-top: 80px; }
 
-.hours {
+.hours,
+.details {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -1008,7 +1022,29 @@ See separate stylesheet: 'easy-responsive-tabs.css'
   text-align: center;
   letter-spacing: 2px;
   line-height: 2;
-  color: white; }
+  color: #000f16;
+  font-size: 1.2em; }
+
+.details {
+  padding-bottom: 50px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: left;
+  -webkit-justify-content: left;
+  -ms-flex-pack: left;
+  justify-content: left; }
+
+.wpcf7-form p {
+  color: #000f16; }
+
+.wpcf7-validation-errors {
+  color: tomato;
+  border: 2px solid tomato; }
+
+.wpcf7-mail-sent-ok {
+  color: #03C9A9; }
 
 /*------------------------------------ Page display Services -----------------------------*/
 .services-content {
